--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    buildFeatures {
+        compose true
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerVersion kotlin_version
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -32,4 +42,14 @@ android {
 dependencies {
     implementation 'com.github.kyuubiran:EzXHelper:0.4.1'
     compileOnly 'de.robv.android.xposed:api:82'
+
+    implementation "androidx.compose.runtime:runtime:$compose_version"
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+
+    implementation 'androidx.activity:activity-compose:1.4.0'
+
+    implementation 'com.google.android.material:material:1.4.0'
+
+    implementation 'androidx.appcompat:appcompat:1.3.1'
 }
