--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,30 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true">
 
-    <meta-data
-        android:name="xposedmodule"
-        android:value="true"/>
-    <meta-data
-        android:name="xposeddescription"
-        android:value="让MIUI再次强大！" />
-    <meta-data
-        android:name="xposedminversion"
-        android:value="54"/>
-    <meta-data
-        android:name="xposedscope"
-        android:resource="@array/xposedscope"/>
+        <activity
+            android:name="org.kitsunepie.makemiuigreatagain.ui.activity.MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.White">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <meta-data
+            android:name="xposedmodule"
+            android:value="true" />
+        <meta-data
+            android:name="xposeddescription"
+            android:value="让MIUI再次强大！" />
+        <meta-data
+            android:name="xposedminversion"
+            android:value="54" />
+        <meta-data
+            android:name="xposedscope"
+            android:resource="@array/xposedscope" />
 
     </application>
 
