--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext {
+        compose_version = '1.1.0-beta02'
+        kotlin_version = '1.5.31'
+        gradle_version = '7.0.2'
+    }
+
     repositories {
         google()
         mavenCentral()
-        maven { url 'https://api.xposed.info/' }
     }
+
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.3"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31"
+        classpath "com.android.tools.build:gradle:$gradle_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlin_version}"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
