--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,10 +46,12 @@ dependencies {
     implementation "androidx.compose.runtime:runtime:$compose_version"
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling:$compose_version"
 
     implementation 'androidx.activity:activity-compose:1.4.0'
 
     implementation 'com.google.android.material:material:1.4.0'
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
+
 }
