--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ android {
 dependencies {
     implementation 'com.github.kyuubiran:EzXHelper:0.4.1'
     compileOnly 'de.robv.android.xposed:api:82'
+    compileOnly project(":stub")
 
     implementation "androidx.compose.runtime:runtime:$compose_version"
     implementation "androidx.compose.ui:ui:$compose_version"
