--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        compose_version = '1.1.0-beta02'
-        kotlin_version = '1.5.31'
-        gradle_version = '7.0.2'
+        compose_version = '1.1.0-rc01'
+        kotlin_version = '1.6.0'
+        gradle_version = '7.0.4'
     }
 
     repositories {
